<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exebit2k15</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_schedule">schedule</string>
    <string name="About_Exebit">About Exebit</string>
    <string name="Help">Help</string>
    <string name="title_activity_profile_page_main_page">profile_page_main_page</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_list_of_events"></string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="hospi">"How to reach IITM? "</string>
    <string name="bus">1. Transportation by Bus</string>
    <string name="walk">You can board Bus 5C at Central and get down at either Gandhi Mandapam or the Cancer Insitute and take a five-minute walk to campus.</string>
    <string name="train">2. Transportation by train</string>
    <string name="metro">You can board the local metro at Chennai Park (which is about 200 meter far from Chennai Central) and get down at Kasturbai Nagar and take a five-minute walk to campus.</string>
    <string name="acc">For accomodation,click here.</string>
    <string name="registration">Registration</string>
    <string name="name">Username:</string>
    <string name="birthdate">Date of Birth:</string>
    <string name="college">College Name:</string>
    <string name="gender">Gender:</string>
    <string name="email">Email ID:</string>
    <string name="password">Password:</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="userName">User Name:</string>
    <string name="remember">Remember Me</string>
    <string name="submit">Submit</string>
    <string name="later">Not Now</string>
/>            <string name="title_activity_sponsors_fragment">SponsorsFragment</string>
    <string name="title_activity_hospitality">Hospitality</string>
    <string name="title_activity_dash_board_fragment">DashBoardFragment</string>

</resources>
