<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/first_background"
    android:id="@+id/matrix">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:src="@drawable/exebit_logo" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="76dp"
        android:background="@color/myPrimaryColor"
        android:text="@string/login"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:background="@color/myPrimaryColor"
        android:layout_marginTop="45dp"
        android:text="@string/register"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/myPrimaryColor"
        android:layout_below="@+id/button1"
        android:layout_marginTop="45dp"
        android:text="@string/later"
        android:textColor="#ffffff" />

</RelativeLayout>
